Extracted parsing diff string to method & fixed add file error, added command history window, added mergetool & include whitespace settings, fixed shift click selection in change list, made close button always visible in the error message dialog

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -109,8 +109,15 @@ body {
   transform: translateY(-50%);
   margin: auto;
   max-height: 60%;
-  overflow-y: auto;
   box-shadow: $material-dialog-shadow;
+  .modal-content {
+    display: flex;
+    flex-direction: column;
+    .modal-body {
+      overflow-y: auto;
+      flex-grow: 1;
+    }
+  }
 }
 
 .rounded {
